# freertos-integration

./: .editorconfig  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/cargo-install-cached/: action.yaml
.github/actions/setup-tools/: action.yaml
.github/workflows/: claude-review.yml  claude.yml  coverage.yaml  validate.yaml
examples/: Cargo.toml
examples/examples/linux/: main.rs
veecle-freertos-examples/: Cargo.toml  FreeRTOSConfig.h  README.md
veecle-freertos-examples/examples/linux/: main.rs
veecle-freertos-integration/: Cargo.toml  README.md  build.rs
veecle-freertos-integration/src/: allocator.rs  hooks.rs  isr.rs  lib.rs  queue.rs  scheduler.rs  timers.rs  units.rs
veecle-freertos-integration/src/task/: block_on_future.rs  mod.rs
veecle-freertos-integration/tests/: allocator_box.rs  allocator_string.rs  assert_hook.rs  delays.rs  queue_async_blocking.rs  queue_async_messages_waiting.rs  queue_async_receive_no_send.rs  queue_async_send_exceed_max_capacity.rs  queue_async_send_from_isr.rs  queue_async_send_from_isr_exceed_max_capacity.rs  queue_async_to_blocking.rs  queue_blocking_to_async.rs  queue_failed_allocation.rs  queue_messages_waiting.rs  queue_raw.rs  queue_receive_no_send.rs  queue_send_exceed_max_capacity.rs  queue_send_from_isr.rs  queue_send_from_isr_exceed_max_capacity.rs  queue_send_receive.rs  queue_spaces_available.rs  queues.rs  scheduler_tick_count.rs  scheduler_tick_count_duration.rs  self-check.rs  task_closure_get_name.rs  task_curent_not_found.rs  task_current_get_name.rs  task_get_name.rs  task_id.rs  task_notification_value.rs  task_notify.rs  task_notify_from_isr.rs  task_notify_increment.rs  task_notify_no_action.rs  task_notify_set_bits.rs  task_raw.rs  task_stack.rs  task_start.rs  task_wait_for_notification.rs  (+9 more)
veecle-freertos-integration/tests/common/: mod.rs
veecle-freertos-sys/: Cargo.toml  README.md  build.rs  fallbacks.c  fallbacks.h  macro-shim.c  macro-shim.h  wrapper.h
veecle-freertos-sys/src/: error.rs  lib.rs  macro_wrappers.rs  posix-sample-bindings.rs  safe_wrappers.rs
