[package]
name = "veecle-freertos-examples"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
veecle-freertos-integration = { path = "../veecle-freertos-integration", default-features = false, features = [
  "link-freertos",
  # SAFETY: we use the same prototype in `FreeRTOSConfig.h` as required by this feature.
  "unsafe-hooks-assert",
] }
