[package]
name = "veecle-freertos-sys"
version = "0.1.2"
edition.workspace = true
description = "Rust bindings for FreeRTOS"
repository.workspace = true
license.workspace = true
links = "freertos"
publish = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]

[dev-dependencies]
similar-asserts = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen = { workspace = true, features = ["prettyplease", "runtime"] }
cc = { workspace = true }
walkdir = { workspace = true }

[features]
default = ["link-freertos"]
# Links (and builds, depending on env-vars) the FreeRTOS library.
# When using this crate to build a static library for inclusion in a C project, it can be necessary to
# disable this feature to only link the freertos library in the final linking stage in the C project.
link-freertos = []

[lints]
workspace = true
